--- a/.github/workflows/main_golfstatsapp.yml
+++ b/.github/workflows/main_golfstatsapp.yml
@@ -26,14 +26,17 @@ jobs:
       - name: Build with dotnet
         run: dotnet build --configuration Release
 
+      - name: Test
+        run: dotnet test --no-build --configuration Release --verbosity normal
+
       - name: dotnet publish
-        run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+        run: dotnet publish Server/GolfStatsApp.Server.csproj -c Release -o "./publish"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          path: "./publish"
 
   deploy:
     runs-on: windows-latest
@@ -55,11 +58,18 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_5E9F938BC059495EA5C18AC9849AB7C7 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_E5F1D153203D443B8776BC5E95B5DC5B }}
 
+      - name: Verify Azure Context and App Service
+        run: |
+          echo "Checking current Azure context..."
+          az account show
+          echo "Checking if App Service exists..."
+          az webapp show --name golfstatsapp-csangggvd5hwbtfm --resource-group GolfStatsApp --query "name" -o tsv || echo "App Service not found or no access"
+
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'GolfStatsApp'
+          app-name: 'golfstatsapp-csangggvd5hwbtfm'
           slot-name: 'Production'
           package: .
           
