--- a/.github/workflows/main_golfstatsapp.yml
+++ b/.github/workflows/main_golfstatsapp.yml
@@ -54,6 +54,7 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
+          auth-type: IDENTITY
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_5497efe8-58c1-4caa-ac38-6042c2e53532 }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_2ceae5f1-40be-4e11-955e-c702ce672ee8 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_E5F1D153203D443B8776BC5E95B5DC5B }}
